tests/paczka1/fuzzy1/60373484.err
Error in line 6: 4F1grrO A126 56,9
Error in line 7: S858 A918 85,7
Error in line 19: dAL A126 89,5
Error in line 22: S858 S491 72,2
Error in line 20: 4F1grrO A126 72,7
